Updated with alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
 	strong, b
 	{
 		font-weight: bold;
-		color: #000000;
+		color: ##89bf04;
 	}
 
 	em, i
